--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -1,5 +1,5 @@
 
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
 
 body, .ui-btn {
     font-family: Roboto;
