--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Application Home Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/home.css"/>
+    <link rel="stylesheet" href="static/css/home.css">
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -15,6 +15,7 @@
     <div class="container">
         <h1 class="banner">People Demo Application</h1>
         <div class="section editor">
+            <input id="person_id" type="hidden" value="" />
             <label for="fname">First Name
                 <input id="fname" type="text" />
             </label>
